# semaphore-witness-example

./: Cargo.toml  README.md  package.json  setup.sh
src/: Sha256BytesStatic.circom  main.rs  multiplier.circom  passport_verifier.circom  proof_of_passport.circom  serialization.rs
