[package]
name = "wtest"
version = "0.1.0"
edition = "2021"

[dependencies]
witness = {git = "https://github.com/philsippl/circom-witness-rs"}

ruint = { version = "1.10.0", features = ["rand", "serde", "ark-ff-04"] }
serde = "1.0.136"
serde_json = "1.0.91"
semaphore-depth-config = { git = "https://github.com/worldcoin/semaphore-rs.git", features = ["depth_16"] }
semaphore-depth-macros = { git = "https://github.com/worldcoin/semaphore-rs.git", features = ["depth_16"] }
once_cell = "1.8"

[build-dependencies]
witness = {git = "https://github.com/philsippl/circom-witness-rs", features = ["build-witness"]}

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true