[package]
name = "wtest"
version = "0.1.0"
edition = "2021"


[patch.crates-io]
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }



[dependencies]
# witness = {git = "https://github.com/philsippl/circom-witness-rs", features = ["build-witness"]}
witness = {path = "../circom-witness-rs"}
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }


ruint = { version = "1.10.0", features = ["rand", "serde", "ark-ff-04"] }
serde = "1.0.136"
serde_json = "1.0.91"
semaphore-depth-config = { git = "https://github.com/worldcoin/semaphore-rs.git", features = ["depth_16"] }
semaphore-depth-macros = { git = "https://github.com/worldcoin/semaphore-rs.git", features = ["depth_16"] }
once_cell = "1.8"
ark-circom = { git = "https://github.com/0xturboblitz/circom-compat.git" }
ark-bn254 = { version = "=0.4.0" }
# ark-bn254 = { git = "https://github.com/arkworks-rs/curves.git", rev = "36683380", features = ["std"] }
# ark-bn254 = { git = "https://github.com/0xturboblitz/curves.git", branch = "bigger_bigint", features = ["std"] }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "=0.4.0" }
ark-ec = { version = "=0.4.1" }
ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel", "asm"] }
ark-relations = { version = "=0.4.0", default-features = false }
ark-serialize = { version = "=0.4.1", default-features = false }
color-eyre = "=0.6.2"
ethers = "=2.0.7"
tokio = { version = "1", features = ["full"] }
jni = "0.18"
log = "0.4"
android_logger = "0.8"
serde_derive = "1.0"
byteorder = "=1.4.3"
num-traits = { version = "=0.2.15", default-features = false }
hex = "0.4"
num-bigint = { version = "=0.4.3", default-features = false, features = [
    "rand",
] }
ark-zkey = { git = "https://github.com/oskarth/mopro.git", branch = "main" }


[build-dependencies]
witness = {path = "../circom-witness-rs", features = ["build-witness"]}
# witness = {path = "../circom-witness-rs"}

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true